--- a/text/xharmi00-chapters.tex
+++ b/text/xharmi00-chapters.tex
@@ -13,7 +13,7 @@
 \section{Static Analysis by Abstract Interpretation}
 
 
-\section{Facebook Infer\,--\,Static Analysis Framework}
+\section{\texorpdfstring{Facebook Infer\,--\,Static Analysis Framework}{}}
 
 
 \section{Contracts for Concurrency}
