Text - Introduction and Preliminaries - static analysis

--- a/text/xharmi00-appendices.tex
+++ b/text/xharmi00-appendices.tex
@@ -3,10 +3,12 @@
 
 
 \chapter{Contents of Attached Memory Media}
+\label{chap:memoryMedia}
 
 
 
-\chapter{Installation and Usage Manual}
+\chapter{Installation and User Manual}
+\label{chap:manual}
 
 
 %===============================================================================
