--- a/text/xharmi00-bibliography.bib
+++ b/text/xharmi00-bibliography.bib
@@ -2,12 +2,32 @@
 % (c) Dominik Harmim
 
 
-@BOOK{Pravidla,
-    author =       "Zdeněk Hlavsa and others",
-    title =        "{\it Pravidla českého pravopisu}",
-    publisher =    "Academia",
-    year =         "2005",
-    isbn =         "80-200-1327-X",
+@INPROCEEDINGS{excel2019FBInfer,
+    author = {Harmim, Dominik and Marin, Valdimír and Pavela, Ondřej},
+    title = {Scalable Static Analysis Using Facebook Infer},
+    booktitle = {Excel@FIT},
+    publisher = {
+        Brno University of Technology, Faculty of Information Technology
+    },
+    year = {2019}
+}
+
+@BOOK{staticAnalysisMoller,
+    author = {Møller, Anders and Schwartzbach, I. Michael},
+    title = {Static Program Analysis},
+    publisher = {Department of Computer Science, Aarhus University},
+    year = {2018},
+    month = {October}
+}
+
+@INPROCEEDINGS{favStaticAnalysis,
+    author = {Vojnar, Tomáš},
+    title = {Different Approaches to Formal Verification and Analysis},
+    booktitle = {Formal Analysis and Verification},
+    publisher = {
+        Brno University of Technology, Faculty of Information Technology
+    },
+    year = {2018},
 }
 
 %===============================================================================
