--- a/text/xharmi00.tex
+++ b/text/xharmi00.tex
@@ -4,14 +4,14 @@
 % Author contact: xharmi00@stud.fit.vutbr.cz
 %===============================================================================
 % encoding: UTF-8
-%------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 % processing: make, make pdf, make clean
-%==============================================================================
+%===============================================================================
 % Included files:
 %  xharmi00-bibliography.bib - bibliography
 %  xharmi00-chapters.tex - the thesis content
 %  xharmi00-appendices.tex - appendices
-%==============================================================================
+%===============================================================================
 
 \documentclass[english, czech, zadani, odsaz]{fitthesis}
 
@@ -131,31 +131,33 @@
     % Abstract
     % abstract in czech language
     abstract.cs = {%
-        Cílem této práce je navrhnout statický analyzátor programů pro detekci
-        porušení atomicity. Navržený analyzátor\,---\,Atomer\,---\,je
-        implementován jako rozšíření pro Facebook Infer, což je volně
-        šířený a~snadno rozšířitelný nástroj, který umožňuje efektivní
-        modulární a~inkrementální analýzu. Analyzátor pracuje na úrovni
-        sekvencí volání funkcí. Navržené řešení je založeno na předpokladu,
-        že sekvence, které jsou jednou zavolány atomicky, by měly být
-        pravděpodobně volány atomicky vždy. Implementovaný analyzátor byl
-        úspěšně ověřen a~vyhodnocen jak na malých programech, vytvořených
-        pro tento účel, tak na veřejně dostupných testovacích programech,
-        které vznikly ze skutečných nízko úrovňových programů.
+        Cílem této práce je navrhnout \emph{statický analyzátor} programů, 
+        který bude sloužit pro detekci \emph{porušení atomicity}. Navržený
+        analyzátor\,---\,\emph{Atomer}\,---\,je implementován jako rozšíření 
+        pro \emph{Facebook Infer}, což je volně šířený a~snadno rozšířitelný
+        nástroj, který umožňuje efektivní \emph{modulární} 
+        a~\emph{inkrementální} analýzu. Analyzátor pracuje na úrovni
+        \emph{sekvencí volání funkcí}. Navržené řešení je založeno na
+        předpokladu, že sekvence, které jsou \emph{jednou zavolány atomicky}, 
+        by měly být pravděpodobně volány \emph{atomicky vždy}. Implementovaný
+        analyzátor byl úspěšně ověřen  a~vyhodnocen jak na malých programech,
+        vytvořených pro tento účel, tak na veřejně dostupných testovacích
+        programech, které vznikly ze skutečných nízko úrovňových programů.
     },
     % abstract in english
     abstract.en = {%
-        The goal of this thesis is to propose a~static
-        analyser of programs for detecting atomicity violations. The proposed
-        analyser\,---\,Atomer\,---\,is implemented as an extension
-        for Facebook Infer, which is an open-source and extendable static
-        analysis framework that promotes efficient modular and incremental
-        analysis. The analyser works on the level of sequences of function
-        calls. The proposed solution is based on the assumption that
-        sequences executed once atomically should probably be executed always
-        atomically. The implemented analyser has been successfully verified
-        and evaluated on both smaller programs created for this purpose as
-        well as publicly available benchmarks derived from real-life low-level
+        The goal of this thesis is to propose a~\emph{static analyser} of
+        programs, which detects \emph{atomicity violations}. The proposed
+        analyser\,---\,\emph{Atomer}\,---\,is implemented as an extension
+        for \emph{Facebook Infer}, which is an open-source and extendable 
+        static analysis framework that promotes efficient \emph{modular} and
+        \emph{incremental} analysis. The analyser works on the level of 
+        \emph{sequences of function calls}. The proposed solution is based 
+        on the assumption that sequences executed \emph{once atomically} 
+        should probably be executed \emph{always atomically}. The 
+        implemented analyser has been successfully verified and evaluated 
+        on both smaller programs created for this purpose as well as 
+        publicly available benchmarks derived from real-life low-level 
         programs.
     },
 %
@@ -173,7 +175,7 @@
         I would like to thank my supervisor Tomáš Vojnar. Further, I would
         like to thank Tomáš Fiedor for providing supplementary information and
         for his assistance. I would also like to thank my colleagues Vladimír
-        Marcin and Ondřej Pavela for helpful discussions about the thesis.
+        Marcin and Ondřej Pavela for helpful discussions about my thesis.
         Lastly, I thank for the support received from
         H2020 ECSEL project Aquas.
     }
