Text - vlna fix

--- a/text/xharmi00.tex
+++ b/text/xharmi00.tex
@@ -172,11 +172,11 @@
 %
     % Acknowledgement
     acknowledgment = {%
-        I would like to thank my supervisor Tomáš Vojnar. Further, I would
+        I~would like to thank my supervisor Tomáš Vojnar. Further, I~would
         like to thank Tomáš Fiedor for providing supplementary information and
-        for his assistance. I would also like to thank my colleagues Vladimír
+        for his assistance. I~would also like to thank my colleagues Vladimír
         Marcin and Ondřej Pavela for helpful discussions about my thesis.
-        Lastly, I thank for the support received from
+        Lastly, I~thank for the support received from
         H2020 ECSEL project Aquas.
     }
 }
